sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:5: error: not found: value ecart
  ecart = getNombreValeurs()/2
  ^AlgShellSort:6: error: not found: value ecart
  while(ecart>1){
        ^AlgShellSort:10: error: not found: value ecart
      while( k>=ecart &&getValeur(k-ecart)>v){setValeur(k,getValeur(k-ecart));k+= -ecart;}
                ^AlgShellSort:10: error: not found: value ecart
      while( k>=ecart &&getValeur(k-ecart)>v){setValeur(k,getValeur(k-ecart));k+= -ecart;}
                                    ^AlgShellSort:10: error: not found: value ecart
      while( k>=ecart &&getValeur(k-ecart)>v){setValeur(k,getValeur(k-ecart));k+= -ecart;}
                                                                      ^AlgShellSort:10: error: not found: value ecart
      while( k>=ecart &&getValeur(k-ecart)>v){setValeur(k,getValeur(k-ecart));k+= -ecart;}
                                                                                   ^AlgShellSort:13: error: not found: value ecart
    ecart = ecart/2
    ^